crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@multi_assign_type_mismatch_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/multi_assign_type_mismatch_fail.tapir
---
Error: Incorrect type, expected int but got fix
   ╭─[ multi_assign_type_mismatch_fail.tapir:3:8 ]
   │
 2 │ var a, b = 1, 2;
   │     ┬  
   │     ╰── Defined as int
 3 │ a, b = 1.0, 2.0;
   │        ─┬─  
   │         ╰─── Assigning fix
───╯
Error: Incorrect type, expected int but got fix
   ╭─[ multi_assign_type_mismatch_fail.tapir:3:13 ]
   │
 2 │ var a, b = 1, 2;
   │        ┬  
   │        ╰── Defined as int
 3 │ a, b = 1.0, 2.0;
   │             ─┬─  
   │              ╰─── Assigning fix
───╯
